navbar mobile menu overflow fixes && link target boxes extended

--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,12 @@ body {
 	width: 100vw;
 	height: 100vh;
 	background-color: var(--bg-accent);
+	color: var(--text);
 	font-family: 'Rockwell';
 	font-weight: normal;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	color: var(--text);
+	overflow-x: hidden;
 }
 
 ul {
