--- a/src/styles/MobileMenu.css
+++ b/src/styles/MobileMenu.css
@@ -7,7 +7,8 @@
 	border: 2px solid var(--color);
 	border-radius: 10px;
 	text-align: center;
-	transition: height 1s ease;
+	overflow-x: hidden;
+	animation: slideNavMenu 1000ms 1 ease-in-out;
 }
 
 .dropdown_menu_item {
@@ -23,4 +24,13 @@
 
 .dropdown_menu_item:hover {
 	background-color: #525357;
+}
+
+@keyframes slideNavMenu {
+	from {
+		right: -99vw;
+	}
+	to {
+		right: 0;
+	}
 }
